--- a/Prática_em_Python_Limpeza_e_Tratamento_de_dados.ipynb
+++ b/Prática_em_Python_Limpeza_e_Tratamento_de_dados.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1wRPx4AsNqAtKn59MvbwqgyLu53L5JlER",
-      "authorship_tag": "ABX9TyOmasnd/kXFQ1RTKFUuj1lD"
+      "authorship_tag": "ABX9TyOmasnd/kXFQ1RTKFUuj1lD",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/elvissoares625/elvissoares625/blob/main/Pr%C3%A1tica_em_Python_Limpeza_e_Tratamento_de_dados.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
